1-networkpolicy-limitrange-resourcequota/app-team2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app-team2
  namespace: pro-security
  labels:
    role: team2
spec:
  containers:
  - image: tomcat
    name: tomcat
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  resources:
    requests:
      memory: "64Mi"
      cpu: "250m"
    limits:
      memory: "128Mi"
      cpu: "500m"
